# ReviewScraper

./: .dockerignore  .env.example  .gitignore  .tsbuildinfo  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-queue-integration.js  tsconfig.json  vitest.config.ts
config/database/: init.sql
config/environments/: development.env  production.env  test.env
docs/: plan.md
migrations/: .gitkeep
src/api/: Dockerfile  package.json
src/labeler/: Dockerfile  batch_label_reviews.py  package.json  pyproject.toml  requirements.txt  sample_data.csv  taxonomy.json  tsconfig.json
src/labeler/data/: Splid_–_Split_group_bills_ALL_SORTED_reviews.csv  Splitser_-_WieBetaaltWat_ALL_SORTED_reviews.csv  Splitwise_ALL_SORTED_reviews.csv  tricount_-_Split_group_bills_ALL_SORTED_reviews.csv
src/labeler/sample_data/: Settle_Up_-_Group_Expenses_ALL_SORTED_reviews.csv
src/labeler/src/: index.ts  labeler.ts  queue-worker.ts  service.ts  worker.ts
src/labeler/src/__tests__/: integration.test.ts  labeler.test.ts  worker.test.ts
src/scraper/: Dockerfile  data.json  insights.js  package.json  scrape_reviews.js  tsconfig.json
src/scraper/src/: index.ts  queue-worker.ts  scraper.test.ts  scraper.ts  service.ts  worker.ts
src/scraper/src/__tests__/: service.test.ts  worker.test.ts
src/scraper/src/types/: app-store-scraper.d.ts
src/shared/: package.json  tsconfig.json
src/shared/src/: index.ts
src/shared/src/config/: environment.ts  index.ts
src/shared/src/database/: cli.ts  health.ts  index.ts  migrate.ts  pool.test.ts  pool.ts  transaction.test.ts  transaction.ts  types.ts
src/shared/src/health/: checker.test.ts  checker.ts  index.ts  metrics.ts  shutdown.ts  types.ts
src/shared/src/logging/: correlation.ts  index.ts  logger.test.ts  logger.ts  types.ts
src/shared/src/queue/: connection.ts  (+8 more)
(+15 files in other folders)
